Revert "pull request fixes"
This reverts commit d1c8c3b2b8baf83c039421addd6677b47a1271f8.