@@ -5,17 +5,19 @@ import com.epam.team1.emotional.help.dto.QuestionRequestDto;
 import com.epam.team1.emotional.help.dto.QuestionResponseDto;
 import com.epam.team1.emotional.help.model.Answer;
 import com.epam.team1.emotional.help.model.Question;
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
-@RequiredArgsConstructor
 public class QuestionMapper {
 
     private final AnswerMapper answerMapper;
+
+    public QuestionMapper(AnswerMapper answerMapper) {
+        this.answerMapper = answerMapper;
+    }
 
     public Question toQuestion(QuestionRequestDto dto){
         Question question = new Question();
@@ -32,15 +34,13 @@ public class QuestionMapper {
         return QuestionResponseDto.builder()
                 .id(question.getId())
                 .name(question.getName())
-                .answers(answerMapper.toAnswerResponseDtoList(question.getAnswersList()))
+                .answers(mapAllAnswers(question.getAnswersList()))
                 .build();
     }
 
-
-
-    public List<QuestionResponseDto> toQuestionResponseDtoList(List<Question> questions){
-        return questions.stream()
-                .map(this::toQuestionResponseDto)
-                .toList();
+    private List<AnswerResponseDto> mapAllAnswers(List<Answer> answers) {
+        return answers.stream()
+                .map(answerMapper::mapToResponseDto)
+                .collect(Collectors.toList());
     }
 }
